# quantica

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.claude/skills/numerical-validation/: SKILL.md
.github/workflows/: ci.yml
apps/: __init__.py  _capital.py  _data.py  _derivatives.py  _risk.py  quantica_app.py
apps/data/: _build_sample.py  ff_sample.npz
docs/api/: index.html  quantica.html
docs/api/quantica/: core.html  factor.html  portfolio.html  pricing.html  rates.html  risk.html  statarb.html
docs/api/quantica/core/: types.html
docs/api/quantica/factor/: data.html  estimators.html  evaluation.html  exposures.html  model.html  statistical.html
docs/api/quantica/portfolio/: backtest.html  black_litterman.html  construction.html  cv.html  data.html  hrp.html  overfitting.html  strategy.html
docs/api/quantica/pricing/: calibration.html  engines.html  greeks.html  instruments.html  processes.html  volatility.html
docs/api/quantica/pricing/engines/: analytic.html  asian.html  autocallable.html  barrier.html  binomial.html  finitediff.html  heston.html  lsm.html  merton.html  montecarlo.html
docs/api/quantica/rates/: bootstrap.html  curve.html  instruments.html  interpolation.html
docs/api/quantica/risk/: backtest.html  credit.html  derivatives.html  engines.html  frtb.html  measures.html  ml_validation.html  portfolio.html
docs/api/quantica/risk/credit/: calibration.html  data.html  discrimination.html  stability.html
docs/api/quantica/risk/ml_validation/: explainability.html  fairness.html  robustness.html  soundness.html
docs/api/quantica/statarb/: cointegration.html  data.html  kalman.html  spread.html  strategy.html
quantica/: __init__.py
quantica/core/: __init__.py  types.py
quantica/factor/: __init__.py  data.py  estimators.py  evaluation.py  exposures.py  model.py  statistical.py
quantica/portfolio/: __init__.py  backtest.py  black_litterman.py  construction.py  cv.py  data.py  hrp.py  overfitting.py  strategy.py
quantica/pricing/: __init__.py  calibration.py  greeks.py  instruments.py  processes.py  volatility.py
quantica/pricing/engines/: __init__.py  _carr_madan.py  _common.py  _paths.py  analytic.py  asian.py  autocallable.py  barrier.py  binomial.py  finitediff.py  heston.py  lsm.py  merton.py  montecarlo.py
quantica/rates/: __init__.py  bootstrap.py  curve.py  instruments.py  interpolation.py
quantica/risk/: __init__.py  backtest.py  derivatives.py  engines.py  frtb.py  measures.py  portfolio.py
quantica/risk/credit/: __init__.py  _common.py  calibration.py  data.py  discrimination.py  stability.py
quantica/risk/ml_validation/: __init__.py  explainability.py  fairness.py  robustness.py  soundness.py
quantica/statarb/: __init__.py  cointegration.py  data.py  kalman.py  spread.py  strategy.py
scripts/: _ff_data.py  autocallable_smile_report.py  black_litterman_report.py  build_docs.py  convergence_table.py  covariance_comparison_report.py  derivatives_var_report.py  factor_model_report.py  frtb_pla_report.py  heston_calibration_report.py  hrp_robustness_report.py  jump_diffusion_smile.py  ml_validation_report.py  pd_validation_report.py  portfolio_backtest_report.py  rannacher_gamma_demo.py  rates_curve_report.py  risk_backtest_report.py  shortsale_shrinkage_report.py  statarb_cointegration_report.py  statarb_kalman_report.py  statarb_strategy_report.py  statistical_factor_report.py
tests/apps/: test_apps_smoke.py
tests/core/: test_types.py
tests/factor/: test_estimators.py  test_evaluation.py  test_factor_model.py  test_statistical.py
tests/portfolio/: test_backtest.py  test_black_litterman.py  test_construction.py  test_cv.py  test_hrp.py  test_jagannathan_ma.py  test_overfitting.py  test_strategy.py
tests/pricing/: test_calibration.py  test_cross_method.py  test_engines.py  test_instruments.py  test_processes.py  test_volatility.py
tests/pricing/engines/: test_american.py  test_analytic.py  test_asian.py  test_autocallable.py  test_barrier.py  test_benchmark_quantlib.py  test_binomial.py  test_finitediff.py  test_heston.py  test_lsm.py  test_merton.py  test_montecarlo.py
tests/rates/: __init__.py  test_benchmark_quantlib.py  test_bootstrap.py  test_curve.py  test_interpolation.py
tests/risk/: test_backtest_size_power.py  test_backtests.py  test_derivatives.py  test_engines.py  test_frtb.py  test_measures.py
tests/risk/credit/: test_calibration.py  test_champion_challenger.py  test_discrimination.py  test_size_power.py  test_stability.py
tests/risk/ml_validation/: test_explainability.py  test_fairness.py  test_robustness.py  test_soundness.py
tests/statarb/: __init__.py  test_cointegration.py  test_kalman.py  test_spread.py  test_strategy.py
