[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantica"
version = "0.1.0"
description = "A tested and validated quantitative-finance library: option pricing, portfolio construction, and model validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dominik Hanke", email = "199665447+dominikhanke98@users.noreply.github.com" }]
keywords = ["quant", "finance", "options", "pricing", "model-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# Runtime dependencies are kept deliberately lean (see CLAUDE.md §3).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    # arch supplies the GARCH volatility filter for filtered-historical-simulation
    # VaR (CLAUDE.md §3 — lean on it rather than hand-rolling GARCH). It is imported
    # lazily, so only the FHS engine pulls it in.
    "arch>=6.3",
]

[project.optional-dependencies]
# Development toolchain: lint/format, type-checking, and testing.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Champion/challenger PD models for the credit-validation demo and tests.
    # NOT a runtime dependency: the credit validators consume model outputs
    # (y, PD scores), never a fitted model object (CLAUDE.md §3).
    "scikit-learn>=1.4",
    # SHAP values for the ML-validation demo and tests. Same posture: the
    # ml_validation package consumes SHAP matrices / predict callables only.
    "shap>=0.46",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
]
# QuantLib is a TEST/BENCHMARK-only dependency, never a runtime dependency.
# Benchmarking against it is the "effective challenge" evidence (CLAUDE.md §3).
benchmark = [
    "QuantLib>=1.33",
]

[project.urls]
Homepage = "https://github.com/dominikhanke/quantica"
Repository = "https://github.com/dominikhanke/quantica"

[tool.hatch.build.targets.wheel]
packages = ["quantica"]

# --------------------------------------------------------------------------- #
# Ruff: linter + formatter (replaces black / isort / flake8).
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["quantica", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
    "RUF", # ruff-specific rules
]
# Single-letter names are idiomatic in quant maths (S, K, r, q, T, d1, d2).
# Allow them rather than fighting the domain notation.
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
# Report scripts intentionally emit typographic en/em dashes (their stdout is
# embedded verbatim in the README), so allow "ambiguous" Unicode there.
"scripts/**/*.py" = ["RUF001"]

[tool.ruff.format]
docstring-code-format = true

# --------------------------------------------------------------------------- #
# mypy: strict-ish static typing on the package (the core is the product).
# --------------------------------------------------------------------------- #
[tool.mypy]
# Runtime support is 3.11+ (see requires-python); we type-check against 3.12
# semantics because current numpy ships stubs that use the 3.12 `type` alias
# statement, which mypy only parses when the analysis target is >= 3.12.
# Ruff's target-version = "py311" guards against 3.12-only *syntax* creeping in.
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["quantica"]

# Third-party libraries without bundled type stubs.
[[tool.mypy.overrides]]
module = ["scipy.*", "QuantLib.*", "arch.*", "pandas.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest.
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "benchmark: cross-checks against QuantLib (requires the 'benchmark' extra; run with -m benchmark).",
]

[tool.coverage.run]
source = ["quantica"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
