[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantica"
version = "0.1.0"
description = "A tested and validated quantitative-finance library: option pricing, portfolio construction, and model validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dominik Hanke", email = "199665447+dominikhanke98@users.noreply.github.com" }]
keywords = ["quant", "finance", "options", "pricing", "model-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# Runtime dependencies are kept deliberately lean (see CLAUDE.md §3).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    # arch supplies the GARCH volatility filter for filtered-historical-simulation
    # VaR (CLAUDE.md §3 — lean on it rather than hand-rolling GARCH). It is imported
    # lazily, so only the FHS engine pulls it in.
    "arch>=6.3",
    # statsmodels supplies OLS-with-inference for factor-exposure estimation
    # (CLAUDE.md §3 — lean on it rather than hand-rolling regression). Already a
    # transitive dependency of arch; made explicit and imported lazily.
    "statsmodels>=0.14",
    # scikit-learn supplies the Ledoit-Wolf shrinkage covariance for the factor
    # estimator comparison (CLAUDE.md §3 — lean on it, don't re-derive the
    # shrinkage intensity). Imported lazily, so only the LW estimator pulls it in.
    "scikit-learn>=1.4",
    # cvxpy supplies the convex solver for constrained portfolio construction
    # (mean-variance / minimum-variance / risk-parity QPs with long-only, position
    # and turnover constraints; CLAUDE.md §3 — lean on it, don't hand-roll the QP).
    # Imported lazily, so only the construction layer pulls it in.
    "cvxpy>=1.5",
    # streamlit + plotly power the interactive apps (apps/quantica_app.py). They are
    # declared as *runtime* deps — a deliberate exception to the lean-core rule
    # (CLAUDE.md §3) — because the deployed app genuinely needs them and Streamlit
    # Community Cloud installs from this pyproject's main group only (it ignores
    # requirements.txt and does not install optional extras). Only code under apps/
    # imports them; the quantica package itself never does, so the library stays
    # "fully usable without any UI" (CLAUDE.md §1) — the cost is install footprint,
    # not code coupling. (Was an [app] extra until it proved uninstallable on deploy.)
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
# Development toolchain: lint/format, type-checking, and testing.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # SHAP values for the ML-validation demo and tests. Same posture: the
    # ml_validation package consumes SHAP matrices / predict callables only.
    "shap>=0.46",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.100",
]
# QuantLib is a TEST/BENCHMARK-only dependency, never a runtime dependency.
# Benchmarking against it is the "effective challenge" evidence (CLAUDE.md §3).
benchmark = [
    "QuantLib>=1.33",
]
# Documentation toolchain. `pdoc` generates the API reference straight from the NumPy
# docstrings (one command, no config file); `interrogate` is the docstring-coverage
# gate that fails CI if a public symbol is undocumented, so the reference can never
# silently drift from the code (CLAUDE.md — the docstring is the single source of truth).
docs = [
    "pdoc>=14.0",
    "interrogate>=1.7",
]

[project.urls]
Homepage = "https://github.com/dominikhanke/quantica"
Repository = "https://github.com/dominikhanke/quantica"

[tool.hatch.build.targets.wheel]
packages = ["quantica"]

# --------------------------------------------------------------------------- #
# Ruff: linter + formatter (replaces black / isort / flake8).
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["quantica", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
    "RUF", # ruff-specific rules
]
# Single-letter names are idiomatic in quant maths (S, K, r, q, T, d1, d2).
# Allow them rather than fighting the domain notation.
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
# Report scripts intentionally emit typographic en/em dashes (their stdout is
# embedded verbatim in the README), so allow "ambiguous" Unicode there.
"scripts/**/*.py" = ["RUF001"]
# The apps' user-facing labels legitimately use Greek and typographic symbols
# (σ, κ, θ, ρ, λ, μ, –, ×), so allow "ambiguous" Unicode in strings/docstrings/comments.
"apps/**/*.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
docstring-code-format = true

# --------------------------------------------------------------------------- #
# mypy: strict-ish static typing on the package (the core is the product).
# --------------------------------------------------------------------------- #
[tool.mypy]
# Runtime support is 3.11+ (see requires-python); we type-check against 3.12
# semantics because current numpy ships stubs that use the 3.12 `type` alias
# statement, which mypy only parses when the analysis target is >= 3.12.
# Ruff's target-version = "py311" guards against 3.12-only *syntax* creeping in.
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["quantica"]

# Third-party libraries without bundled type stubs.
[[tool.mypy.overrides]]
module = ["scipy.*", "QuantLib.*", "arch.*", "pandas.*", "statsmodels.*", "sklearn.*", "cvxpy.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest.
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Put the repo root on sys.path so the app smoke tests can import the (uninstalled)
# `apps` package; `quantica` itself is imported from the editable install.
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "benchmark: cross-checks against QuantLib (requires the 'benchmark' extra; run with -m benchmark).",
]

[tool.coverage.run]
source = ["quantica"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

# --------------------------------------------------------------------------- #
# interrogate: the docstring-coverage gate. Fails if any *public* symbol lacks a
# docstring, so the API reference (generated from those docstrings by pdoc) can never
# silently drift from the code — you cannot add a public function without documenting
# it. Run as `interrogate quantica apps`. Private (`_`-prefixed), dunder, and nested
# functions are exempt (they may be lighter); everything else must be 100% documented.
# --------------------------------------------------------------------------- #
[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
ignore-regex = ["^_.*"]
fail-under = 100
exclude = ["scripts", "tests", "docs", "setup.py"]

